static/styles/assignments.css
.job-box {
justify-content: space-between;
align-items: center;
background:#EAF2FF;
-webkit-box-shadow: 0 0 35px 0 rgba(130, 130, 130, 0.2);
        box-shadow: 0 0 35px 0 rgba(130, 130, 130, 0.2);
padding: 10px 35px;
border: 1px solid #1E1E1E;
}

.job-right {
display: flex; /* This will place buttons next to each other */
gap: 10px; /* Adds space between buttons */
}

ul {
list-style: none; 
}

@media (min-width: 992px) {
.job-overview {
  position: -webkit-sticky;
  position: sticky;
  top: 70px;
}
}

@media (min-width: 768px) {
.job-content ul li {
  border-bottom: 0;
  padding: 0;
}
}

.job-content ul li i {
font-size: 20px;
position: relative;
top: 1px;
}

.mb-30 {
  margin-bottom: 30px;
}

.assignments-button {
background-color: #EFF7FF;
color: #1E1E1E;
border: 2px solid #1E1E1E;
padding: 5px 30px;
text-align: center;
display: inline-block;
font-size: 20px;
cursor: pointer;
width: 100%; /* Ensures each button stretches to the full width of its container */
box-sizing: border-box; /* Ensures padding doesn't affect overall width */
text-decoration: none;
white-space: nowrap;
transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out; /* Smooth transition for hover effects */
}

.assignments-button:hover, .assignments-button:active, .assignments-button:focus {
color: #EAF2FF !important; 
background-color: #1E1E1E;
}

.assignments-button img {
  vertical-align: middle;
  margin-left: 0em;
  height: 1em;
  margin-bottom: 0.2em;
}

.assignments-button:hover img {
  filter: invert(86%) sepia(94%) saturate(7362%) hue-rotate(179deg) brightness(107%) contrast(107%);
}

#deadline-text {
color: #5E5E5E;
font-size: 16px;
}

/* Add a media query for mobile views */
@media (max-width: 768px) {
  .assignments-button {
    padding: 5px 20px; /* Reduce padding */
    font-size: 16px; /* Reduce font size */
    white-space: normal; /* Allow the text to wrap if needed */
    min-width: 0; /* Override any min-width set */
    width: 100%; /* Allow the width to auto-adjust based on content */
    box-sizing: border-box; /* Ensure padding is included in width */
    margin-bottom: 10px; /* Add some margin to the bottom */
  }

  .job-right {
    margin-top: 10px; /* Add some space between the text and buttons */
  }
}

